--- a/index.ipynb
+++ b/index.ipynb
@@ -211,22 +211,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices: \n",
-    "    entry= str(index)+'. ' + citynames[index]\n",
-    "    names_and_ranks.append\n",
+    "    entry= str(index+1)+'. ' + city_names[index]\n",
+    "    names_and_ranks.append(entry)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12. Iguazu Falls'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
