--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,9 @@
     }
    ],
    "source": [
-    "for city in cities: "
+    "city_populations=[]\n",
+    "for city in cities:\n",
+    "    city_population.append(city['Populat'])"
    ]
   },
   {
